--- a/praw.ini
+++ b/praw.ini
@@ -1,7 +1,7 @@
 [dadbot]
-client_id: cj7n5vBy63_bIQ
-client_secret: IbqaA5u-6-xlkvQ-tBZSUt5OTSE
+client_id: nope
+client_secret: nope
 username: TonysDadJokes
-password: Ilcppf1!
+password: nope
 
 
